# claude-code-camp-2026-Q2

./: .gitignore
.boukensha/: settings.yaml
.boukensha/sessions/: 20260723T195204Z-e0d3c74d.jsonl  20260723T203215Z-27d3d05a.jsonl  20260724T040948Z-f05bc9f5.jsonl  20260724T043623Z-b1eb56c6.jsonl  20260724T133906Z-7a8d4dc1.jsonl  20260724T134521Z-9c26fca4.jsonl  20260724T134546Z-59fce39c.jsonl  20260724T142622Z-222d8c68.jsonl  20260724T151112Z-112c3a30.jsonl  20260724T153551Z-8d4fb35f.jsonl  20260724T153749Z-4cbca2a4.jsonl  20260724T154332Z-546b0d75.jsonl  20260724T154931Z-caaec028.jsonl  20260724T154941Z-18ab082e.jsonl  20260724T155304Z-1e90ff8b.jsonl  20260724T160004Z-47c214a3.jsonl  20260724T161125Z-27bc3c1a.jsonl  20260724T161319Z-d1b1cd44.jsonl  20260724T162040Z-4baba464.jsonl  20260724T162655Z-33d9f5c4.jsonl  20260724T170255Z-de0563cf.jsonl  20260724T170348Z-f62bc028.jsonl  (+1 more)
docs/: explore_architectures.md
week1_baseline/python/10_standard_tool_library/: README.md  boukensha_loader.py  pyproject.toml
week1_baseline/python/10_standard_tool_library/boukensha/: __init__.py  agent.py  client.py  config.py  context.py  registry.py  repl.py  run_dsl.py  tool.py
week1_baseline/python/10_standard_tool_library/boukensha/backends/: gemini.py  ollama.py
week1_baseline/python/10_standard_tool_library/boukensha/mcp/: client.py
week1_baseline/python/10_standard_tool_library/boukensha/tasks/: base.py
week1_baseline/python/10_standard_tool_library/boukensha/tools/: mcp.py
week1_baseline/python/10_standard_tool_library/examples/: example.py  mcp_mud_demo.py
(+96 files in other folders)
