[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boukensha"
version = "0.0.0"
description = "Boukensha agent — Step 10: A Standard Tool Library"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
boukensha = "boukensha_loader:main"

[tool.setuptools]
py-modules = ["boukensha_loader"]

[tool.setuptools.packages.find]
include = ["boukensha*"]
